# manga-ocr

./: .cursorrules  .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
articles/: manga-ocr-introduction.md
docs/: PERFORMANCE.md  TROUBLESHOOTING.md
docs/00_CONTEXT/: product-goal.md  system-design.md
docs/10_SPEC/: api-definition.md  data-model.md
docs/20_PLAN/: roadmap.md
src/: __init__.py  cli.py  detector.py  exceptions.py  ocr.py  output.py  panel_detector.py  pipeline.py  processor.py  setup_helper.py  utils.py
tests/: __init__.py  conftest.py  test_detector.py  test_ocr.py  test_output.py  test_panel_detector.py  test_processor.py  test_utils.py
