[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-ocr"
version = "0.1.0"
description = "Zipファイルで圧縮された漫画画像を一括でOCR処理するCLIツール"
readme = "README.md"
requires-python = ">=3.10"
license.text = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy<2.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.1.2",
    "natsort>=8.4.0",
    "wandb>=0.10.0",
    "torchsummary>=1.5.0",
    "pyclipper>=1.2.0",
    "shapely>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.0.0",
    "manga-ocr",
]

[project.scripts]
manga-ocr = "src.cli:main"
manga-ocr-setup = "src.setup_helper:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

